# MANeUveR-Website

./: Procfile  logging_config.py  main.py  pyproject.toml  requirements.txt
solver/: LICENSE.md  README.md  add_useCase.py  buildSurivorTable.py  runTests.py  test.py
solver/Data/: Surrogate.csv
solver/Output/: web_output.txt
solver/PlotData/: Best_SB_CPLEX.csv  Best_SB_Z3.csv  Best_SB_chuffed.csv  Best_SB_chuffed_Oryx2.csv  Best_SB_chuffed_SecureBilling.csv  Best_SB_chuffed_SecureWeb.csv  Best_SB_chuffed_Wordpress.csv  Best_SB_chuffed_Wordpress20.csv  Best_SB_chuffed_Wordpress250.csv  Best_SB_chuffed_Wordpress40.csv  Best_SB_chuffed_Wordpress500.csv  Best_SB_cplex_Oryx2.csv  Best_SB_cplex_SecureBilling.csv  Best_SB_cplex_SecureWeb.csv  Best_SB_cplex_Wordpress.csv  Best_SB_cplex_Wordpress20.csv  Best_SB_cplex_Wordpress250.csv  Best_SB_cplex_Wordpress40.csv  Best_SB_cplex_Wordpress500.csv  Best_SB_gecode.csv  Best_SB_gecode_Oryx2.csv  Best_SB_gecode_SecureBilling.csv  Best_SB_gecode_SecureWeb.csv  Best_SB_gecode_Wordpress.csv  Best_SB_gecode_Wordpress20.csv  Best_SB_gecode_Wordpress250.csv  Best_SB_gecode_Wordpress40.csv  Best_SB_gecode_Wordpress500.csv  Best_SB_or-tools.csv  Best_SB_or-tools_Oryx2.csv  Best_SB_or-tools_SecureBilling.csv  Best_SB_or-tools_SecureWeb.csv  Best_SB_or-tools_Wordpress.csv  Best_SB_or-tools_Wordpress20.csv  Best_SB_or-tools_Wordpress250.csv  Best_SB_or-tools_Wordpress40.csv  Best_SB_or-tools_Wordpress500.csv  Best_SB_overall.csv  Best_SB_z3_Oryx2.csv  (+8 more)
templates/: 400.html  500.html  home.html  index.html  result.html  template.html
(+5749 files in other folders)
