[tool.poetry]
name = "dizeratie-website"
version = "0.1.0"
description = ""
authors = ["Vlad Luca <ioan-vlad.luca@golfgenius.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
