[tool.poetry]
name = "dizeratie-website"
version = "0.1.0"
description = ""
authors = ["Vlad Luca <ioan-vlad.luca@golfgenius.com>"]

[tool.poetry.dependencies]
python = "^3.9"
Flask = "^2.2.2"
networkx = "^2.8.7"
minizinc = "^0.7.0"
numpy = "^1.23.4"
z3-solver = "^4.11.2"
docplex = "^2.23.222"
docloud = "^1.0.375"
ortools = "^9.4.1874"

[tool.poetry.dev-dependencies]
black = "^22.10.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
